Fixed image alignment problems

--- a/css/index.css
+++ b/css/index.css
@@ -568,19 +568,20 @@ body .first-view .main-container .content .image .second {
     align-items: center;
   }
   body .second-view .yellow-page .shots .shot-block {
-    width: 80%;
+    width: 90vw;
     height: 100%;
-    display: block;
+    display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
   }
   body .second-view .yellow-page .shots .shot-block .screens {
+    padding-top: 50px;
     width: 70vw;
     height: 85%;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    justify-content: space-between;
   }
   body .second-view .yellow-page .shots .shot-block .screens img {
     height: 100%;
@@ -588,26 +589,31 @@ body .first-view .main-container .content .image .second {
     border-radius: 7px;
   }
   body .second-view .yellow-page .shots .shot-block .screens .text-box {
-    width: 100%;
+    width: 100vw;
     padding: 0;
+    margin: 0 auto;
+    padding-top: 20px;
+    padding-bottom: 40px;
   }
   body .second-view .yellow-page .shots .shot-block .screens .text-box h3 {
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 2.1rem;
     font-family: 'PT Serif', serif;
     color: black;
     margin-bottom: 0.8rem;
   }
   body .second-view .yellow-page .shots .shot-block .screens .text-box p {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     width: 100%;
     line-height: 1.2;
     color: black;
   }
   body .second-view .yellow-page .shots .shot-block .onethree {
-    width: 100vw;
+    margin: 0;
+    padding: 0;
   }
   body .second-view .yellow-page .shots .shot-block .two {
-    width: 100vw;
+    margin: 0;
+    padding: 0;
   }
 }
