--- a/styles/media-queries.less
+++ b/styles/media-queries.less
@@ -177,19 +177,23 @@
                     align-items: center;
         
                     .shot-block {
-                        width: 80%;
+                        width: 90vw;
                         height: 100%;
-                        display: block;
+                        display: flex;
+                        flex-direction: column;
                         justify-content: space-around;
                         align-items: center;
         
                         .screens {
+                            padding-top: 50px;
                             width: 70vw;
                             height: 85%;
                             display: flex;
-                            justify-content: center;
-                            align-items: center;
                             flex-direction: column;
+                            justify-content: space-between;
+                            // border: 1px solid black;
+                            // align-items: center;
+                            // flex-direction: column;
                             // padding: 1.5rem;
         
                             img {
@@ -200,19 +204,22 @@
         
                             .text-box {
                                 // height: 20%;
-                                width: 100%;
+                                width: 100vw;
                                 padding:0;
+                                margin: 0 auto;
+                                padding-top: 20px;
+                                padding-bottom: 40px;
         
                                 h3 {
                                     font-weight: bold;
-                                    font-size: 1.5rem;
+                                    font-size: 2.1rem;
                                     font-family: 'PT Serif', serif;
                                     color: black;
                                     margin-bottom: 0.8rem;
                                 }
         
                                 p {
-                                    font-size: 1.3rem;
+                                    font-size: 1.5rem;
                                     width: 100%;
                                     line-height: 1.2;
                                     color: black;
@@ -221,13 +228,13 @@
                         }
         
                         .onethree {
-                            // margin-bottom: -6rem;
-                            width: 100vw;
+                            margin: 0;
+                            padding: 0;
                         }
         
                         .two {
-                            // margin-top: -8rem;
-                            width: 100vw;
+                            margin: 0;
+                            padding: 0;
                         }
                     }
                 }
